Post image responsive to screen size, Swipable scroll on mobile hmepage lower blog posts, trying to fix the router issues.

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -26,7 +26,7 @@
   width: 100%;
   // background-image: url(../../assets/images/forrestgump.jpg);
   background-position: top;
-  background-size: 130%;
+  background-size: 100%;
   background-repeat: no-repeat;
   overflow: hidden;
 
