--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -12,6 +12,9 @@
   }
 
   @include bp-desktop {
+    width: auto;
+    padding: 0 5rem 0 5rem;
+    margin-bottom: 0rem;
   }
 }
 
@@ -62,6 +65,12 @@
   margin-top: 0.25rem;
   border: 0.0625rem solid $color-primary-grey;
   border-radius: 1.5rem;
+
+  @include bp-tablet {
+  }
+}
+
+.post-hero {
 }
 
 .post-img {
@@ -70,6 +79,45 @@
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
+  display: none;
+
+  @include bp-tablet {
+    display: block;
+  }
+
+  @include bp-laptop {
+    height: 60vw;
+    width: 100vw;
+  }
+
+  @include bp-desktop {
+    min-width: 59.33vw;
+    min-height: 39.753vw;
+    height: 50vw;
+    width: 100vw;
+  }
+}
+
+.post-img2 {
+  height: 140vw;
+  width: 100vw;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  display: block;
+
+  @include bp-tablet {
+    display: none;
+  }
+
+  @include bp-desktop {
+    // min-width: 89vw;
+    // min-height: 59.63vw;
+    min-width: 59.33vw;
+    min-height: 39.753vw;
+    height: auto;
+    width: auto;
+  }
 }
 
 .post-more-info {
@@ -81,15 +129,32 @@
   margin: 1rem 1rem 0.5rem 1rem;
 
   @include bp-tablet {
+    @include display-flex(row, center, space-between);
+    width: 96%;
+    padding: 0 1rem;
+    margin: 1rem 0;
   }
 
   @include bp-desktop {
   }
 
+  &__title-container {
+    @include display-flex(row, center, flex-start);
+  }
+
   &__title {
     display: none;
+
     @include bp-small-phone {
       display: inline-block;
+    }
+
+    @include bp-tablet {
+      @include display-flex(column, center, center);
+      text-align: center;
+      font-size: x-large;
+      font-weight: bolder;
+      padding-bottom: 0.2rem;
     }
   }
 }
@@ -97,6 +162,10 @@
 .post-subtitle {
   align-self: center;
   text-align: left;
+  @include bp-tablet {
+    font-size: larger;
+    // margin-left: -3rem;
+  }
 }
 
 .post-skill-tags {
@@ -107,10 +176,16 @@
   text-align: left;
   margin: 0.5rem 0.5rem 0.5rem -0.6rem;
   color: $color-primary-text;
+
+  @include bp-tablet {
+    margin: 0;
+    @include display-flex(row, center, flex-end);
+  }
 }
 
 .post-content {
   background-color: $color-secondary-background;
+  @include display-flex(column, flex-start, flex-start);
 
   &__p--first-letter::first-letter {
     font-size: 1.5rem;
@@ -121,7 +196,6 @@
     text-align: left;
     margin: 1rem;
     initial-letter: 2;
-    display: none;
 
     @include bp-tablet {
       display: inline-block;
@@ -130,22 +204,39 @@
 
   &__media-container {
     margin: 0 1rem;
-    height: 755px;
+    min-height: 755px;
+    min-height: fit-content;
     overflow: hidden;
+    width: 90%;
+
+    @include bp-tablet {
+      width: 96%;
+    }
   }
 
   &__media {
-    height: 745px;
+    min-height: 810px;
     border: 1px solid $color-primary-grey;
     border-radius: 10px;
     width: 99%;
     overflow: hidden;
+
+    @include bp-small-phone {
+      min-height: 851px;
+    }
+
+    @include bp-tablet {
+    }
   }
 }
 
 .post-tags {
   background-color: $color-secondary-background;
   @include display-flex(column, flex-start, center);
+
+  @include bp-desktop {
+    width: 100%;
+  }
 
   &__title {
     margin: 1rem 1rem 0 1rem;
